# science_read

./: README.md  pyproject.toml
src/: cli.py
src/templates/: arxiv.py  template_base.py
tests/: test_template.py
